# ShapeWars

./: CMakeLists.txt  README.md
src/: GameRoot.cpp  GameRoot.h  main.cpp
src/Content/: Art.cpp  Art.h  Sound.cpp  Sound.h
src/Content/Data/: Highscores.txt
src/Content/Include/: Art.h  Bloom.h  GaussianBlur.h  Sound.h
src/Content/Shaders/: BloomCombine.frag  BloomExtract.frag  BlurSaturateCombine.frag  GaussianBlur.frag  Saturate.frag
src/Content/Src/: Art.cpp  Bloom.cpp  GaussianBlur.cpp  Sound.cpp
src/Core/Include/: ColorPicker.h  Extensions.h  SpawnHelper.h
src/Core/Src/: Extensions.cpp  Logger.cpp  RandomVector.cpp  SpawnHelper.cpp
src/Entities/Include/: BlackHoles.h  Bullets.h  Collisions.h  Enemies.h  Nukes.h  PlayerShip.h  ShapeKeeper.h
src/Entities/Include/Player/: Buffs.h  PlayerShip.h  PlayerStatus.h
src/Entities/Include/ShapeKeeper/: DirectionalAttack.h  LasersAttack.h  LasersBeams.h  ShapeKeeper.h  ShapeKeeperBodyPart.h  ShapeKeeperCore.h  ShapeKeeperHealthBar.h  ShapeKeeperHealthContainer.h  SpriteTrail.h
src/Entities/Src/: BlackHoles.cpp  Bullets.cpp  Collisions.cpp  Enemies.cpp  Nukes.cpp  PlayerShip.cpp  ShapeKeeper.cpp
src/Entities/Src/Player/: Buffs.cpp  PlayerShip.cpp  PlayerStatus.cpp
src/Entities/Src/ShapeKeeper/: DirectionalAttack.cpp  LasersAttack.cpp  LasersBeams.cpp  ShapeKeeper.cpp  ShapeKeeperBodyPart.cpp  ShapeKeeperCore.cpp  ShapeKeeperHealthBar.cpp  ShapeKeeperHealthContainer.cpp  SpriteTrail.cpp
src/Favicon/: app.rc
src/GameState/Include/: ActiveMenuOptionIndicator.h  Background.h  GamePlay.h  GameState.h  HighscoreArea.h  IGameState.h  MenuOption.h  OptionsMenu.h  PauseMenu.h  StartMenu.h
src/GameState/Src/: ActiveMenuOptionIndicator.cpp  Background.cpp  GamePlay.cpp  HighscoreArea.cpp  MenuOption.cpp  OptionsMenu.cpp  PauseMenu.cpp  StartMenu.cpp
src/GameState/UI/Include/: FloatingKillTexts.h  GamePlayControlArea.h  GamePlayHUD.h  LivesAndNukes.h
src/GameState/UI/Src/: FloatingKillTexts.cpp  GamePlayControlArea.cpp  GamePlayHUD.cpp  LivesAndNukes.cpp
src/Grid/: Grid.cpp  Grid.h
src/Input/: Input.cpp  Input.h
src/Input/Include/: Buttons.h  Dualsense.h  Input.h  MouseAndKeyboard.h  Nintendo.h  Xbox.h
src/Input/Src/: Buttons.cpp  Dualsense.cpp  Input.cpp  MouseAndKeyboard.cpp  Nintendo.cpp  Xbox.cpp
src/Logger/: Logger.cpp
src/Particles/: Particles.cpp  Particles.h
src/PlayerStatus/: PlayerStatus.cpp  PlayerStatus.h
src/PlayerStatus/Include/: Buffs.h  PlayerStatus.h
src/PlayerStatus/Src/: Buffs.cpp  PlayerStatus.cpp
src/System/Include/: ColorPicker.h  Extensions.h  Logger.h  Quaternion.h  RandomVector.h  SpawnHelper.h
src/System/Src/: ColorPicker.cpp  Extensions.cpp  Quaternion.cpp  RandomVector.cpp  SpawnHelper.cpp
src/Systems/Include/: Grid.h  Particles.h
src/Systems/Src/: Grid.cpp  Particles.cpp
src/UserInterface/: UserInterface.cpp  UserInterface.h
src/UserInterface/Include/: Buttons.h  FloatingKillTexts.h  LivesAndNukes.h  UserInterface.h
src/UserInterface/Src/: Buttons.cpp  FloatingKillTexts.cpp  LivesAndNukes.cpp  UserInterface.cpp
